# py4molcas

./: README.md  pyproject.toml
src/input/: basis_set_list.py  ks_dft_list.py  module_caspt2.py  module_dict.py  module_emil.py  module_gateway.py  module_general.py  module_rasscf.py  module_scf.py  module_seward.py
src/utils/: asserters.py  list_utils.py  string_utils.py
test/: test.inp  test.py
